<?xml version="1.0" encoding="utf-8"?>
<!--Creado y editado por Alberto Catalá López y Victor Manuel Rocha-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/menu"
            android:title="@string/menu"
            android:tint="@color/colorAccent"/>
        <item
            android:id="@+id/nav_manual"
            android:icon="@drawable/document"
            android:title="@string/menu_room" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/menu_client" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contacto"
            android:title="@string/menu_stats"
            android:enabled="false"
            android:iconTint="@android:color/darker_gray"
            android:titleTextColor="@android:color/darker_gray" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help2"
            android:title="@string/menu_help"
            android:enabled="false"
            android:iconTint="@android:color/darker_gray"
            android:titleTextColor="@android:color/darker_gray" />
    </group>
</menu>